Refine oidc-next provider internals